force-app/main/default/objects/Account/fields/ApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNumber__c</fullName>
    <description>Application number</description>
    <displayFormat>App-{0000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>