force-app/main/default/objects/Account/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>