force-app/main/default/objects/Account/fields/BillingCounty__c.field-meta.xml
<CustomField>
    <fullName>BillingCounty__c</fullName>
    <description>TO store county value</description>
    <label>Billing County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>