force-app/main/default/objects/Account/fields/CompanyStarted__c.field-meta.xml
<CustomField>
    <fullName>CompanyStarted__c</fullName>
    <description>Company Started</description>
    <label>Company Started</label>
    <type>Date</type>
</CustomField>