force-app/main/default/objects/Account/fields/CreatedChannel__c.field-meta.xml
<CustomField>
    <fullName>CreatedChannel__c</fullName>
    <description>Created Channel</description>
    <label>Created Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>