force-app/main/default/objects/Account/fields/ExternalApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalApplicationNumber__c</fullName>
    <description>To save External Application Number</description>
    <label>LOS Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>