force-app/main/default/objects/Account/fields/FinServ__LastUsedChannel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LastUsedChannel__c</fullName>
    <label>Last Used Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
                <isActive>false</isActive>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <isActive>false</isActive>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>