force-app/main/default/objects/Account/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abandoned,</fullName>
            </value>
            <value>
                <fullName>Approved,</fullName>
            </value>
            <value>
                <fullName>Cancelled,</fullName>
            </value>
            <value>
                <fullName>Completed,</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Review,</fullName>
                <default>true</default>
                <label>Pending Review,</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Submitted,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>