force-app/main/default/objects/Account/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <description>Page name where the flow is stopped.</description>
    <inlineHelpText>Page name where the flow is stopped.</inlineHelpText>
    <label>Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get-Started,</fullName>
            </value>
            <value>
                <fullName>Eligibility-Confirmation,</fullName>
            </value>
            <value>
                <fullName>Family-Connect,</fullName>
            </value>
            <value>
                <fullName>Personal-Information,</fullName>
            </value>
            <value>
                <fullName>Otp-Verification,</fullName>
            </value>
            <value>
                <fullName>Address-Verification,</fullName>
            </value>
            <value>
                <fullName>Joint,</fullName>
            </value>
            <value>
                <fullName>Beneficiary,</fullName>
            </value>
            <value>
                <fullName>Emergency-Contact,</fullName>
            </value>
            <value>
                <fullName>Employment-Information,</fullName>
            </value>
            <value>
                <fullName>Review-Information,</fullName>
            </value>
            <value>
                <fullName>Password,</fullName>
            </value>
            <value>
                <fullName>Email-Confirmation,</fullName>
            </value>
            <value>
                <fullName>Funding,</fullName>
            </value>
            <value>
                <fullName>Disclosures,</fullName>
            </value>
            <value>
                <fullName>Final-Confirmation,</fullName>
            </value>
            <value>
                <fullName>Welcome-Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>