force-app/main/default/objects/Account/fields/LastUsedChannel__c.field-meta.xml
<CustomField>
    <fullName>LastUsedChannel__c</fullName>
    <description>Last Used Channel</description>
    <label>Last Used Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>