force-app/main/default/objects/Account/fields/MeridianApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>MeridianApplicationStatus__c</fullName>
    <label>Meridian Application Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>