force-app/main/default/objects/Account/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Submitted by user name</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>