force-app/main/default/objects/Account/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <description>Integration status from SF</description>
    <label>Sub Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>