force-app/main/default/objects/Account/fields/UserAccountType__c.field-meta.xml
<CustomField>
    <fullName>UserAccountType__c</fullName>
    <description
  >Field is used to indicate the account belong to which user type</description>
    <inlineHelpText
  >Field is used to indicate the account belong to which user type</inlineHelpText>
    <label>User Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FinancialInstituteAccount</fullName>
                <label>Financial Institute Account</label>
            </value>
             <value>
                <fullName>FinancialInstituteEmployee</fullName>
                <label>Financial Institute Employee</label>
            </value>
            <value>
                <fullName>DealerAccount</fullName>
                <label>Dealer Account</label>
            </value>
             <value>
                <fullName>CustomerApplication</fullName>
                <label>Customer Application</label>
            </value>
             <value>
                <fullName>DealerEmployee</fullName>
                <label>Dealer Employee</label>
            </value>
            <value>
                <fullName>IndividualCustomer</fullName>
                <label>Individual Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>