force-app/main/default/objects/Account/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>To update the package version</description>
    <inlineHelpText>Package version</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>