force-app/main/default/objects/Account/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <description>Application for grorup MintFlow related details</description>
    <label>Application</label>
</RecordType>