force-app/main/default/objects/Account/listViews/Abandoned.listView-meta.xml
<ListView>
    <fullName>Abandoned</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>FinServ__LastUsedChannel__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Abandoned,Cancelled</value>
    </filters>
    <label>Abandoned</label>
</ListView>