force-app/main/default/objects/Account/listViews/Cancelled_or_Abandoned.listView-meta.xml
<ListView>
    <fullName>Cancelled_or_Abandoned</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Abandoned</value>
    </filters>
    <label>Cancelled or Abandoned</label>
</ListView>