force-app/main/default/objects/Account/listViews/CompletedApplications.listView-meta.xml
<ListView>
    <fullName>CompletedApplications</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Applications</label>
</ListView>