force-app/main/default/objects/Account/listViews/Existing_Customers.listView-meta.xml
<ListView>
    <fullName>Existing_Customers</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ApplicationNumber__c</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>ExistingCustomer</value>
    </filters>
    <label>Existing Customers</label>
</ListView>