force-app/main/default/objects/Account/listViews/Funding_In_Progress.listView-meta.xml
<ListView>
    <fullName>Funding_In_Progress</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Funding in Progress</value>
    </filters>
    <label>Funding In Progress</label>
</ListView>