force-app/main/default/objects/Account/listViews/Incomplete_Applications.listView-meta.xml
<ListView>
    <fullName>Incomplete_Applications</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Pending Review</value>
    </filters>
    <label>Incomplete Applications</label>
</ListView>