force-app/main/default/objects/Account/listViews/KYC_Approved.listView-meta.xml
<ListView>
    <fullName>KYC_Approved</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>KYC Approved</label>
</ListView>