force-app/main/default/objects/Account/listViews/KYC_Failed.listView-meta.xml
<ListView>
    <fullName>KYC_Failed</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Revision in Progress</value>
    </filters>
    <label>KYC Failed</label>
</ListView>