force-app/main/default/objects/Account/listViews/PendingReview.listView-meta.xml
<ListView>
    <fullName>PendingReview</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Revision in Progress</value>
    </filters>
    <label>Pending Review</label>
</ListView>