force-app/main/default/objects/Account/listViews/PersonAccount.listView-meta.xml
<ListView>
    <fullName>PersonAccount</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserAccountType__c</field>
        <operation>equals</operation>
        <value>IndividualCustomer</value>
    </filters>
    <label>Person Account</label>
</ListView>