force-app/main/default/objects/Account/listViews/SavedApplications.listView-meta.xml
<ListView>
    <fullName>SavedApplications</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Saved</value>
    </filters>
    <label>Saved Applications</label>
</ListView>