force-app/main/default/objects/Account/listViews/Submit_for_KYC_Review.listView-meta.xml
<ListView>
    <fullName>Submit_for_KYC_Review</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Submit for Review</value>
    </filters>
    <label>Submit for KYC Review</label>
</ListView>