force-app/main/default/objects/Account/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>ApplicationNumber__c</columns>
    <columns>Stage__c</columns>
    <columns>FinServ__Status__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinServ__Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted</label>
</ListView>